# workflow

./: .gitignore  README.md  pyproject.toml
examples/: echo_workflow.py
src/workflow/: __init__.py  cli.py  domain.py  loader.py  metrics.py  ports.py  runner.py  steps.py
src/workflow/adapters/: __init__.py  clock.py  command.py  metrics.py  notify.py
src/workflow/adapters/inbound/clock/: __init__.py
src/workflow/ports/: __init__.py  clock.py  command.py  metrics.py
src/workflow/ports/inbound/: __init__.py
tests/: test_metrics.py  test_prometheus_metrics_recorder.py  test_runner.py
