[project]
name = "workflow"
version = "0.1.0"
description = "Ports-and-adapters workflow runner experiments"
readme = "README.md"
authors = [
    { name = "Kristian Nymann Jakobsen", email = "kristian@nymann.dev" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
workflow = "workflow.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
